<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context=".Activities.CambiarContrasena">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarActivity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBar"

            app:popupTheme="@style/AppTheme"
            app:titleTextColor="@color/colorPrimary">

            <ImageView
                android:id="@+id/toolbar_logo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_logoToolbar"
                android:src="@drawable/logo_facele" />
        </android.support.v7.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/shadow" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/icono_perfil"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="2dp"
                app:civ_circle_background_color="@color/fondo" />

            <TextView
                android:id="@+id/nombreUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/perfil_nombre"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/correoUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="3dp"
                android:text="@string/perfil_email"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cc_contrasena_acutal"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/contraseñaActual"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30sp"
                    android:background="@drawable/edittext_shadow"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="30sp"
                    android:inputType="textPassword"
                    android:layout_marginBottom="15dp"
                    android:maxLines="1"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/cc_nueva_contrasena"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/contraseñaNueva"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="30sp"
                    android:background="@drawable/edittext_shadow"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/boton_confirmarCambiarContraseña"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="70sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="70sp"
                    android:background="@color/greenButton"
                    android:text="@string/perfil_boton_contrasena"
                    android:textColor="#fff" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>